export interface WearLog {
  id: string;
  articleId: string | null;
  outfitId: string | null;
  wornDate: string;
  createdAt: string;
}
